rewrote in classes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box" id="box1">
         <h2>Period 1</h2>
-        <ul id="source">           
+        <ul>           
         </ul>
     </div>
 
@@ -25,6 +25,6 @@
 
     <script src="moment.js"></script>
     <script src="sources.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts1.js"></script>
 </body>
 </html>
